    comsys.
 -- Fixed SIGBUS issue on Solaris. This was not an issue for MUX 2.0.
    Thanks to nails for providing a Solaris test account.
 -- Fixed SIGSEGV bug in timeutil with how the timezone offset table was
    maintained. It required three things to happen at the same time.
 -- Fixed memory leak of Bools upon a @backup or @dump/flatfile. Bug
    originated in MUX 1.6, first fixed in Chaotic MUX, and is already
    fixed in MUSH 3.0.
 -- Left out a definition for SMALLEST_INT_GTE_NEG_QUOTIENT on Win32 which
    affected FLOORDIV, REMAINDER, and dates with negative years. The
    ./configure process on Unix builds it's own autoconf.h file. This is not
    an issue for those running on Unix.
 -- Fixed a vicious heap-corrupting bug in HASH_ProcessBuffer (demonstrated
    in MUX 2.1.3.23 Unix-only). My bug.
 -- Bug #786 - Logging of commands by players set suspect now works. Patch
    from Shawn Wagner.

Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Parser is faster in recognizing %-escapes.
 -- Parser function handling is improved with minimum and maximum range
    checking handled in the parser and not in each individual function.
 -- Database and hashtables use a different hash function which is easier
    for gcc to optimize and therefore, Unix distro should benefit.
    Actually, new hash function is faster than anything else I've found
    for all block sizes from 1-byte up.
 -- For string search with GREP and GREPI, added a Boyer-Moore-Horspool
    string search algorithm for speed.
 -- Perform one strip_ansi() call in do_decomp instead of several.
 -- Remove fourth argument to safe_copy_buf to reduce code size. The 4th
    argument was always LBUF_SIZE-1.
 -- Simplify the varargs_preample family of #defines further.
 -- Use MUXCLI on both Unix and Win32 builds instead of getopt on Unix
    and correct-but-inflexible code on Win32.

Cosmetic Changes:
~~~~~~~~~~~~~~~~

Miscellaneous:
~~~~~~~~~~~~~
 -- Added Manual in LaTeX format.